# C_Repo_Template

./: .bazelrc  .clang-format  .envrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  defs.bzl  graph.in  history.txt  init_bazel.sh  justfile  root_dir  unity copy.BUILD  unity.BUILD
.github/copilot/skills/: bazel.md  c_cpp.md
.github/workflows/: ci.yml
app/: BUILD
app/example_app/: BUILD
app/example_app/include/: example_lib.h
app/example_app/src/: main.c
apps/example_app/: BUILD
apps/example_app/src/: main.c
apps/example_lib/: BUILD
apps/example_lib/src/: example_lib.c
config/toolchain/: BUILD
config/toolchain/macos/: BUILD  brew_clang_toolchain.bzl
docs/: ARCHITECTURE.md  BUILD  BUILD.md  DEVELOPMENT.md
docs/coverage/: cmd_line  index.html
docs/coverage/src/: example_lib.c.func-c.html  example_lib.c.func.html  example_lib.c.gcov.html  index.html
lib/UR/myLinearAlgebra/doc/html/: annotated.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals_func.html  index.html  struct_double_matrix-members.html
lib/UR/myLinearAlgebra/doc/html/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_8.js  all_a.js  all_b.js  files_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js
lib/UR/myLinearAlgebra/doc/latex/: files.tex  matrix_8c.tex  matrix_8h.tex  refman.tex  struct_double_matrix.tex  struct_double_vector.tex
lib/bazel_rules/: BUILD
lib/llist/: A generic linked list library for C.webloc  BUILD  llist.h
modules/gnuplot_i/test/: BUILD  anim.c  example.c  sinepng.c
modules/llist/: BUILD  example_llist.c  llist.c
modules/myLinearAlgebra/doc/: Doxyfile
modules/myLinearAlgebra/doc/html/: classes.html  globals.html  matrix_8c.html  matrix_8h.html  matrix_8h_source.html  menudata.js  struct_double_matrix.html  struct_double_vector-members.html  struct_double_vector.html
modules/myLinearAlgebra/doc/html/search/: all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_c.js  classes_0.js  functions_0.js  functions_2.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js
modules/myLinearAlgebra/doc/latex/: annotated.tex
modules/myLinearAlgebra/src/: BUILD
select/: BUILD
src/: BUILD  armstrong_numbers.c  main.c
src/include/: armstrong_numbers.h
src/lib/: BUILD  hello.c  widget.c
src/lib/include/: hello.h
src/main/: BUILD  main.c
tests/: BUILD  hello_test.cc  test_armstrong_numbers.c
tests/test_example_lib/: BUILD  test_example_lib.c
tests/unit/: BUILD  test_example_lib.c
tools/: BUILD  c_copts.bzl  unity_test.bzl
tools/ThrowTheSwitch/CMock/: BUILD  mock.bzl
tools/ThrowTheSwitch/Unity/: BUILD
tools/ThrowTheSwitch/Unity/lib/: BUILD
tools/benchmark/example/: BUILD  bench_function.cpp
tools/format/: BUILD
tools/license/: BUILD  README.md  license_report.bzl  license_summary_generator.py  sbom_generator.py
tools/logging/: logging.BUILD
tools/logging/example/: BUILD  log_example.c
tools/logging/tests/: BUILD  test_logging.c
tools/scripts/: coverage_html.sh
tools/setup/: README.md  init_bazel_env.sh
tools/simple_benchmark/example/: BUILD
